--- a/src/views/templates/coursesOwned.ejs
+++ b/src/views/templates/coursesOwned.ejs
@@ -7,6 +7,11 @@
       <div class="course-item">
         <a href="/api/course/<%= course.id %>">
           <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>" />
+          <p class="timestamp"><%= course.updated_at %></p>
+          <div class="author">
+            <img src="<%= course.author.avatar %>" alt="User Avatar" class="avatar">
+            <p class="author-info"><strong><%= course.author.username %></strong> • <%=course.author.name%></p>
+          </div>
           <h2><%= course.title %></h2>
           <p><%= course.description %></p>
         </a>
