--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -12,7 +12,7 @@
           <a class="nav-link active" aria-current="page" href="/"><i class="fas fa-home"> Home</i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/api/courses"><i class="fas fa-book"></i> Courses</a>
+          <a class="nav-link" href="/api/courses?page=1&perPage=2"><i class="fas fa-book"></i> Courses</a>
         </li>
 
         <!-- signedin links -->
