pagination controller routes

--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -6,16 +6,16 @@
 <!-- pagination top -->
 <div class="pagination">
     <% if (page && page > 1) { %>
-      <a href="/api/courses?page=<%= page - 1 %>&perPage=<%= perPage %>">Previous</a>
+      <a href="/api/<%= route %>?page=<%= page - 1 %>&perPage=<%= perPage %>">Previous</a>
     <% } %>
     <% for (let i = 1; i <= totalPages; i++) { %>
-      <a href="/api/courses?page=<%= i %>&perPage=<%= perPage %>"
+      <a href="/api/<%= route %>?page=<%= i %>&perPage=<%= perPage %>"
          class="<%= currentPage === i ? 'active' : '' %>">
         <%= i %>
       </a>
     <% } %>
     <% if (page && page < totalPages) { %>
-      <a href="/api/courses?page=<%= page + 1 %>&perPage=<%= perPage %>">Next</a>
+      <a href="/api/<%= route %>?page=<%= page + 1 %>&perPage=<%= perPage %>">Next</a>
     <% } %>
 </div>
 
