pagination for owned courses done

--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -18,7 +18,7 @@
         <!-- signedin links -->
         <% if (user && user.name) { %>
           <li class="nav-item">
-            <a class="nav-link" href="/api/courses-owned"><i class="fas fa-graduation-cap"></i> My courses</a>
+            <a class="nav-link" href="/api/courses-owned?page=1&perPage=2"><i class="fas fa-graduation-cap"></i> My courses</a>
           </li>
 
           <!-- MAIN DROPDOWN -->
