btns style courseDetail

--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -1,7 +1,7 @@
 
 
 <% if (user.role === "admin") { %>
-    <div class="course-admin-options">
+    <div class="course-admin-options opacity-50">
       <div>
         <div>
           <button class="btn">
