--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -21,7 +21,7 @@
             <div class="container mb-4">
                 <div class="row">
                     <div class="col-lg-12">
-                        <iframe  src="<%= course.video_link %>" width="560" height="315" frameborder="0" autoplay allowfullscreen></iframe>
+                        <iframe  src="<%= course.video_link %>" width="560" height="315" sandbox="allow-same-origin" frameborder="0" autoplay allowfullscreen controls></iframe>
                     </div>
                 </div>
             </div>
