--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -14,6 +14,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/api/courses?page=1&perPage=2"><i class="fas fa-book"></i> Courses</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/api/blog"><i class="fas fa-book"></i> Blog</a>
+        </li>
 
         <!-- signedin links -->
         <% if (user && user.name) { %>
