--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -35,6 +35,8 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/api/course/create"><i class="fas fa-plus-circle"></i> Create
                     course</a></li>
+                <li><a class="dropdown-item" href="/api/blog/create"><i class="fas fa-plus-circle"></i> Create
+                    Blog</a></li>
                 <li><a class="dropdown-item" href="/api/admin/users"><i class="fas fa-users-cog"></i> Users panel</a>
                 </li>
                 <% if (user && user.avatar) { %>
