--- a/src/views/templates/blog/blogList.ejs
+++ b/src/views/templates/blog/blogList.ejs
@@ -1,1 +1,61 @@
-<h1>Blogs and Latest News</h1>
+<div class="courses-container">
+    <div class="section-title">
+        <h1>Blogs and Latest News</h1>
+    </div>
+  
+  <!-- pagination top -->
+  <div class="pagination">
+      <% if (page && page > 1) { %>
+        <a href="/api/<%= route %>?page=<%= page - 1 %>&perPage=<%= perPage %>">Previous</a>
+      <% } %>
+      <% for (let i = 1; i <= totalPages; i++) { %>
+        <% if (!(i === totalPages && blogs.length === 0)) { %>
+          <a href="/api/<%= route %>?page=<%= i %>&perPage=<%= perPage %>"
+             class="<%= currentPage === i ? 'active' : '' %>">
+            <%= i %>
+          </a>
+        <% } %>
+      <% } %>
+      
+      <% if (page && page < totalPages) { %>
+        <a href="/api/<%= route %>?page=<%= page + 1 %>&perPage=<%= perPage %>">Next</a>
+      <% } %>
+  </div>
+  
+  
+  <!-- courses -->
+    <div class="courses-grid">
+      <% blogs.forEach((blog, index) => { %>
+        <div class="course-item">
+          <a href="<%= blog.next %>">
+            <img src="<%= blog.thumbnail %>" alt="thumbnail-<%= blog.slug %>" />
+            <p class="timestamp"><%= blog.updated_at %></p>
+            <div class="author">
+              <img src="<%= blog.author.avatar %>" alt="User Avatar" class="avatar">
+              <p class="author-info"><strong><%= blog.author.username %></strong> • <%=blog.author.name%></p>
+            </div>
+            <h2><%= blog.title %></h2>
+              
+              <p><%= blog.description %></p>
+          </a>
+          <% if (isAdmin) {%>
+            <div class="course-actions">
+              <p>
+                <a class='text-muted' href="/api/blog/<%= blog.id %>/update"><i class="fas fa-edit me-2"></i>Edit</a>
+                <input type="hidden" name="author" value="<%= blog.author %>">
+              </p>
+              <p>
+                <a class='text-muted' href="/api/blog/<%= blog.id %>/delete?blogId=<%= blog.id %>"><i class="fas fa-trash-alt me-2"></i>Delete</a>
+              </p>
+            </div>
+          <% }%>
+        </div>
+        <% if ((index + 1) % 4 === 0 && index !== blogs.length - 1) { %>
+          </div>
+          <div class="courses-grid">
+        <% } %>
+      <% }); %>
+    </div>
+  
+  </div>
+  
