blogs pagination OK

--- a/src/views/templates/blog/blogList.ejs
+++ b/src/views/templates/blog/blogList.ejs
@@ -1,6 +1,6 @@
 <div class="courses-container">
     <div class="section-title">
-        <h1>Blogs and Latest News</h1>
+        <h1><%= title %></h1>
     </div>
   
   <!-- pagination top -->
