navbar link blog

--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -12,16 +12,16 @@
           <a class="nav-link active" aria-current="page" href="/"><i class="fas fa-home"> Home</i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/api/courses?page=1&perPage=2"><i class="fas fa-book"></i> Courses</a>
+          <a class="nav-link" href="/api/courses?page=1&perPage=6"><i class="fas fa-book"></i> Courses</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/api/blog"><i class="fas fa-book"></i> Blog</a>
+          <a class="nav-link" href="/api/blog?page=1&perPage=6"><i class="fas fa-book"></i> Blog</a>
         </li>
 
         <!-- signedin links -->
         <% if (user && user.name) { %>
           <li class="nav-item">
-            <a class="nav-link" href="/api/courses-owned?page=1&perPage=2"><i class="fas fa-graduation-cap"></i> My courses</a>
+            <a class="nav-link" href="/api/courses-owned?page=1&perPage=6"><i class="fas fa-graduation-cap"></i> My courses</a>
           </li>
 
           <!-- MAIN DROPDOWN -->
