abot home heading styles

--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -4,3 +4,7 @@
   height: 25px; /* Adjust the width and height as needed */
   object-fit: cover; /* Maintain aspect ratio and cover the container */
 }
+
+.navbar {
+  
+}
