--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -16,6 +16,8 @@
     <!-- Include Plyr.js CSS -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.4/plyr.css" />
     <!-- css files -->
+    <link rel="stylesheet" href="/css/home/home.css">
+    <link rel="stylesheet" href="/css/highlightText.css">
     <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/alert.css">
     <link rel="stylesheet" href="/css/navbar.css">
