--- a/src/views/templates/home.ejs
+++ b/src/views/templates/home.ejs
@@ -1,3 +1,36 @@
-<div class="section-title">
-  <h1>Welcome to Our Website</h1>
+<div class="hero-container home-hero">
+  <img class="hero-logo" src="images/white-logo-buonavibra.png" alt="">
+</div>
+
+<div class="container about">
+  <h1 class="section-title">Acerca de.</h1>
+
+  <div class="row">
+    <div class="col-md-6 text-center">
+      <img src="images/me-about.jpg" style="max-width: 300px; height: auto;" class="shadow-2xl rounded-circle w-100" alt="Marcela Marzetti Gimenez">
+      <h3 class="mt-3 font-weight-bold highlight-txt">Marcela Marzetti</h3>
+    </div>
+    <div class="col-md-6 text-center">
+      <p class="text-xl"><span>¡Bienvenido/a a mi página web!<br><br></span>
+        Mi nombre es Marcela Marzetti y soy una persona como tú, transitando esta experiencia humana aquí en la Tierra.
+        Soy
+        licenciada en administración de empresas y he dedicado gran parte de mi vida a gestionar negocios. Sin embargo,
+        mi
+        camino me llevó al yoga kundalini, una práctica que transformó mi vida y me permitió conectar con mi propia
+        sabiduría interna y mi gurú interno. En estos tiempos de incertidumbre y cambios constantes, el yoga kundalini
+        es
+        una herramienta poderosa para gestionar nuestras energías y conectarnos con nuestro corazón y nuestra alma. A
+        través
+        de esta práctica, podemos activar nuestra magia interna y vivir en un estado de salud, felicidad, dicha, amor,
+        gratitud, alegría, abundancia, paz y prosperidad. Mi intención es acompañarte en este camino de
+        autodescubrimiento
+        y
+        ayudarte a conectar con tu propio gurú interno, esa sabiduría interna que te guía y te permite obtener tu
+        auto-maestría. Juntos, podemos abrir la puerta al campo ilimitado de infinitas posibilidades y concretar todas
+        tus
+        intenciones para vivir en un estado de armonía. ¡Te invito a explorar mi página web y descubrir cómo puedo
+        ayudarte
+        en este camino de crecimiento personal!</p>
+    </div>
+  </div>
 </div>
