--- a/src/public/css/home/home.css
+++ b/src/public/css/home/home.css
@@ -13,3 +13,15 @@
     max-width: 50%; /* Adjust the logo size */
     height: auto; /* Maintain aspect ratio */
 }
+
+#contact {
+    background-image: url('../../images/lotus-flower.jpg'); 
+    background-size: cover;
+    background-position: center; /* Centers the background image */
+    height: 50vh;
+    width: 100vw;
+    display: flex; /* For centering content */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    margin-top: 20px;
+}
