--- a/src/views/templates/home.ejs
+++ b/src/views/templates/home.ejs
@@ -1,7 +1,9 @@
+<!-- hero -->
 <div class="hero-container home-hero">
   <img class="hero-logo" src="images/white-logo-buonavibra.png" alt="">
 </div>
 
+<!-- about -->
 <div class="container about">
   <h1 class="section-title">Acerca de.</h1>
 
@@ -34,3 +36,27 @@
     </div>
   </div>
 </div>
+
+<!-- contact -->
+<div id="contact" class="bg-cover bg-center bg-brightness-50 py-6 h-50vh mt-310px md:m-auto md:mt-50px">
+  <!-- Section title -->
+  <h1 class="p-4 text-2xl italic font-bold text-center text-white">Contacto.</h1>
+
+  <!-- Container for icons -->
+  <div class="container-lg d-flex justify-content-center align-items-center flex-wrap shadow-xl rounded-2xl bg-black-20 backdrop-blur-lg p-4 mt-4 mx-4">
+    <a href="http://www.youtube.com" class="text-decoration-none text-white mx-5 fs-3">
+      <i class="bi bi-youtube"></i>
+    </a>
+    <a href="https://wa.me/2615996913" class="text-decoration-none text-white mx-5 fs-3">
+      <i class="bi bi-whatsapp"></i>
+    </a>
+    <a href="https://www.instagram.com/marcelamarzetti/" class="text-decoration-none text-white mx-5 fs-3">
+      <i class="bi bi-instagram"></i>
+    </a>
+    <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=marzettimarcela@gmail.com&subject=Summer%20Party&body=Afiliado%20de%20Buona%20Vibra!"
+      class="text-decoration-none text-white mx-5 fs-3">
+      <i class="bi bi-envelope"></i>
+    </a>
+  </div>
+</div>
+
