--- a/src/public/css/home/home.css
+++ b/src/public/css/home/home.css
@@ -1,27 +1,38 @@
 .home-hero {
-    background-image: url('../../images/hero-image.jpg'); 
-    background-size: cover;
-    background-position: center; /* Centers the background image */
-    height: 100vh;
-    width: 100vw;
-    display: flex; /* For centering content */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
+  background-image: url("../../images/hero-image.jpg");
+  background-size: cover;
+  background-position: center; /* Centers the background image */
+  height: 100vh;
+  width: 100vw;
+  display: flex; /* For centering content */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
 }
 
 .hero-logo {
-    max-width: 50%; /* Adjust the logo size */
-    height: auto; /* Maintain aspect ratio */
+  max-width: 50%; /* Adjust the logo size */
+  height: auto; /* Maintain aspect ratio */
 }
 
 #contact {
-    background-image: url('../../images/lotus-flower.jpg'); 
-    background-size: cover;
-    background-position: center; /* Centers the background image */
-    height: 50vh;
-    width: 100vw;
-    display: flex; /* For centering content */
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    margin-top: 20px;
+  background-image: url("../../images/lotus-flower.jpg");
+  background-size: cover;
+  background-position: center; /* Centers the background image */
+  height: 100vh;
+  width: 100vw;
+  display: flex; /* For centering content */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  margin-top: 20px;
+}
+
+.backdrop-filter {
+  background-color: rgba(255, 255, 255, 0.098); /* Adjust opacity as needed */
+  backdrop-filter: blur(20px); /* Adjust blur amount as needed */
+}
+
+.icon {
+  width: 34px;
+  height: 34px;
+  margin-inline: 6px;
 }
