--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -40,8 +40,9 @@
     
     <!-- dynamic body-->
     <%- body %>
-
+    
     <!-- common footer  -->
+    <%- include ('footer') -%>
 
     <!-- Common scripts -->
     <script id="alert" src="/js/alert.js"></script>
