--- a/src/views/templates/home.ejs
+++ b/src/views/templates/home.ejs
@@ -4,7 +4,7 @@
 </div>
 
 <!-- about -->
-<div class="container about">
+<div class="container about" id="about">
   <h1 class="section-title">Acerca de.</h1>
 
   <div class="row">
