--- a/src/views/templates/home.ejs
+++ b/src/views/templates/home.ejs
@@ -73,7 +73,7 @@
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Mensaje</label>
-          <textarea class="form-control" id="message" rows="3" name="message"></textarea>
+          <textarea class="form-control" id="message" rows="3" name="msg"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
