--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -1,6 +1,7 @@
 <!-- index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,19 @@
     <!-- Your common head content goes here -->
     <!-- font awesome -->
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="..." crossorigin="anonymous" />
     <!-- Bootstrap JS and jQuery -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <!-- Link Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Include Plyr.js CSS -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.4/plyr.css" />
     <!-- css files -->
+    <link rel="stylesheet" href="/css/blog/blogDetail.css">
     <link rel="stylesheet" href="/css/home/home.css">
     <link rel="stylesheet" href="/css/highlightText.css">
     <link rel="stylesheet" href="/css/form.css">
@@ -31,30 +37,39 @@
     <link rel="stylesheet" href="/css/courseCreateModule.css">
     <link rel="stylesheet" href="/css/courseCreateModule.css">
     <link rel="stylesheet" href="/css/usersPanel.css">
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Sohne:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;500;600;700&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
     <!-- Common header -->
     <%- include ('navbar') -%>
-    <%- include ('alert') -%>
-    
-    <!-- dynamic body-->
-    <%- body %>
-    
-    <!-- common footer  -->
-    <%- include ('footer') -%>
+        <%- include ('alert') -%>
 
-    <!-- Common scripts -->
-    <script id="alert" src="/js/alert.js"></script>
-    <!-- Include Plyr.js library -->
-    <script src="https://cdn.plyr.io/3.6.4/plyr.js"></script>
-    <!-- Initialize Plyr.js -->
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            // Select all video players with class 'plyr__video-embed' and initialize Plyr
-            const players = Array.from(document.querySelectorAll('.plyr__video-embed')).map(p => new Plyr(p));
-        });
-    </script>
-    
+            <!-- dynamic body-->
+            <%- body %>
+
+                <!-- common footer  -->
+                <%- include ('footer') -%>
+
+                    <!-- Common scripts -->
+                    <script id="alert" src="/js/alert.js"></script>
+                    <!-- Include Plyr.js library -->
+                    <script src="https://cdn.plyr.io/3.6.4/plyr.js"></script>
+                    <!-- Initialize Plyr.js -->
+                    <script>
+                        document.addEventListener('DOMContentLoaded', () => {
+                            // Select all video players with class 'plyr__video-embed' and initialize Plyr
+                            const players = Array.from(document.querySelectorAll('.plyr__video-embed')).map(p => new Plyr(p));
+                        });
+                    </script>
+
 </body>
+
 </html>
