--- a/src/views/templates/blog/blogDetail.ejs
+++ b/src/views/templates/blog/blogDetail.ejs
@@ -36,13 +36,14 @@
               </span>
           </p>
           <div>
-            <h1>
+            <h1 class="fw-bolder text-uppercase blog-title">
               <%= blog.title %>
             </h1>
           </div>
-          <h3>
+          <h3 class="">
             <%= blog.description %>
           </h3>
+          <hr>
           <div id="text_content">
             <!-- Ensure to use <%- %> to render HTML unescaped / NOT <%= %> -->
             <pre><code><%- htmlContent %></code></pre>
