--- a/src/public/css/pagination.css
+++ b/src/public/css/pagination.css
@@ -1,27 +1,28 @@
 /* Style for pagination links */
 .pagination a {
     display: inline-block;
-    padding: 8px 12px;
+    padding: 12px;
     text-decoration: none;
-    color: #fff;
-    background-color: #9e35e4; /* Purple background color */
-    border-radius: 5px;
+    color: #000;
+    background-color: #fff; /* Purple background color */
+    border-radius: 10px;
     transition: background-color 0.3s ease;
+    margin-bottom: 20px;
 }
 
 /* Hover effect for pagination links */
 .pagination a:hover {
-    background-color: #7b2cbf; /* Darker purple on hover */
+    background-color: #ffe48a; /* Darker purple on hover */
 }
 
 /* Active/current page link style */
 .pagination a.active {
-    background-color: #320654; /* Darker purple for the active/current page */
+    background-color: #d65fde; /* Darker purple for the active/current page */
 }
 
 /* Hover effect for active/current page link */
 .pagination a.active:hover {
-    background-color: #4b176b; /* Darker shade on hover for active page */
+    background-color: #d65fde; /* Darker shade on hover for active page */
 }
 
 /* Center the pagination links */
